trade mark symbol added

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     
-    <title>First Match</title>
+    <title>FirstMatch&trade;</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
